kubernetes/apps/home-assistant/matter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter-server
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: matter-server
  ports:
    - name: websocket
      protocol: TCP
      port: 5580
      targetPort: websocket
