kubernetes/apps/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: home-cloud
      namespace: gateway
      sectionName: https
  hostnames:
    - hass.home.antonu.org
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
